kubernetes/base/adminer-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: adminer
  name: adminer
  namespace: archive
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adminer
  strategy: {}
  template:
    metadata:
      labels:
        app: adminer
    spec:
      containers:
        - env:
            - name: ADMINER_DEFAULT_SERVER
              value: postgres
            - name: ADMINER_DESIGN
              value: nette
            - name: ADMINER_PLUGINS
              value: tables-filter tinymce
          image: adminer:4-standalone
          name: adminer
          ports:
            - containerPort: 8080
          resources: 
            limits:
                memory: "500Mi"
                cpu: "0.2"
      restartPolicy: Always
status: {}
