kubernetes/base/client-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: client
  name: client
  namespace: archive
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  strategy: {}
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - image: client
          name: client
          ports:
            - containerPort: 8080
          resources: 
            limits:
              memory: "500Mi"
              cpu: "500Mi"
      restartPolicy: Always
status: {}
