kubernetes/base/server-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: server
  name: server
  namespace: archive
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: server
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/arch
                operator: In
                values:
                - amd64
              - key: kubernetes.io/arch
                operator: NotIn
                values:
                - arm64
      containers:
        - envFrom:
            - configMapRef:
                name: server
          image: arceo99/archive-server:1.0.2
          name: server
          ports:
            - containerPort: 4000
          resources: 
            limits:
                memory: "2Gi"
                cpu: "2"
          volumeMounts:
            - mountPath: /usr/src/app/archive-data
              name: archive-data
      restartPolicy: Always
      volumes:
        - name: archive-data
          persistentVolumeClaim:
            claimName: archive-data
status: {}
