kubernetes/base/adminer-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: adminer
  name: adminer
  namespace: archive
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: adminer
status:
  loadBalancer: {}
