kubernetes/base/client-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: client
  name: client
  namespace: archive
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: client
status:
  loadBalancer: {}
