kubernetes/base/server-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: server
  name: server
  namespace: archive
spec:
  ports:
    - port: 80
      targetPort: 4000
  selector:
    app: server
status:
  loadBalancer: {}
